# sat

./: .gitignore  .pre-commit-config.yaml  AllTestLauncherSat.py  README.md  __init__.py  complete_sat.sh  requirements.txt  salomeTools.py  sat
.github/workflows/: docs.yml  test.yml
commands/: __init__.py  application.py  base.py  check.py  clean.py  compile.py  compute_dependencies.py  config.py  configure.py  doc.py  environ.py  find_duplicates.py  generate.py  init.py  install.py  job.py  jobs.py  launcher.py  log.py  make.py  makeinstall.py  package.py  patch.py  prepare.py  profile.py  run.py  script.py  shell.py  source.py  template.py  test.py  test_command.py  testcommand.py
data/: distrib.pyconf  local.pyconf  local_original.pyconf  local_wambeke_cea.pyconf  local_wambeke_home.pyconf  site.pyconf
data/compil_scripts/: CAS_6.7.sh  Homard.sh  Jinja2.sh  MeshGems.sh  ParMetis-3.sh  ParaView-5.0.sh  PyQt.sh  Pygments.sh  Python.sh  Sphinx.sh  boost.sh  cgns.sh  cmake.sh  cppunit.sh  cython.sh  dateutil.sh  distribute.sh  docutils.sh  doxygen.sh  fftw.sh  freeimage-3.16.0.sh  freetype.sh  graphviz-2.38.0.sh  hdf5CMake.sh  lapack.sh  libxml2_2_9_2.sh  markupsafe.sh  matplotlib.sh  medCMake.sh  metis.sh  netgen.sh  numpy.sh  omniORB.sh  omniORBpy.sh  opencv.sh  pyparsing.sh  pyreadline.sh  pytz.sh  qt.sh  qwt-6.1.0.sh  (+8 more)
data/env_scripts/: CAS.py  Cython.py  Homard.py  Jinja2.py  MeshGems.py  ParMetis.py  ParaView.py  PyQt.py  Pygments.py  Python.py  Sphinx.py  boost.py  cgns.py  cmake.py  cppunit.py  dateutil.py  distene_license.py  distribute.py  docutils.py  doxygen.py  fftw.py  freeimage.py  freetype.py  gl2ps.py  graphviz.py  hdf5.py  lapack.py  libxml2.py  markupsafe.py  matplotlib.py  med.py  metis.py  netgen.py  numpy.py  omniORB.py  omniORBpy.py  opencv.py  pyparsing.py  pyreadline.py  pytz.py  (+10 more)
data/modules/: KERNEL.pyconf  MODULE_ARCHIVE.pyconf  MODULE_CVS.pyconf  MODULE_DEFAULTVERSION.pyconf  MODULE_DIR.pyconf  MODULE_FIXED.pyconf  MODULE_NATIVE.pyconf  MODULE_SVN.pyconf  softA.pyconf  softB.pyconf
data/patches/: SALOME_PROFILE_NO_ENV.patch  freetype-2.4.11_ft_export_FD20.patch  gl2ps-1.3.8_link_libm_FD20.patch  matplotlib-1.4.3_no_auto_download.patch  matplotlib_1_4_3_patch_freetype_detection_for_SAT.patch  matplotlibrc-qt4.patch  netgen-4.9.13_without_togl.patch  netgen49ForSalome.patch  patchPyQt496noPhonon.patch  qt-4.8.4-enable-webkit-compilation-whith-gcc5.patch  scipy-0.14.1.patch
data/products/: CAS.pyconf  Cython.pyconf  GEOM.pyconf  GUI.pyconf  Homard.pyconf  Jinja2.pyconf  KERNEL.pyconf  LIBBATCH.pyconf  MEDCOUPLING.pyconf  MODULE_ARCHIVE.pyconf  MODULE_CVS.pyconf  MODULE_DEFAULTVERSION.pyconf  MODULE_DIR.pyconf  MODULE_FIXED.pyconf  MODULE_SVN.pyconf  MeshGems.pyconf  PRODUCT_ARCHIVE.pyconf  PRODUCT_CVS.pyconf  PRODUCT_DEFAULTVERSION.pyconf  PRODUCT_DEV.pyconf  PRODUCT_FIXED.pyconf  PRODUCT_GIT.pyconf  PRODUCT_NATIVE.pyconf  PRODUCT_SVN.pyconf  PRODUCT_UNKNOWN.pyconf  ParMetis.pyconf  PyQt.pyconf  Pygments.pyconf  Python.pyconf  SALOME_PROFILE.pyconf  SMESH.pyconf  Sphinx.pyconf  boost.pyconf  cgns.pyconf  cmake.pyconf  cppunit.pyconf  dateutil.pyconf  distribute.pyconf  docutils.pyconf  doxygen.pyconf  (+33 more)
data/softwares/: softA.pyconf  softB.pyconf
data/templates/CppComponent/doc/: Makefile.am  doxyfile.in  index.doc
data/templates/CppComponent/src/CPPCMPGUI/: CPPCMPGUI.cxx  CPPCMPGUI.h  CPPCMP_icons.ts  CPPCMP_msg_en.ts  CPPCMP_msg_fr.ts  Makefile.am
data/templates/CppSalome6/src/Cpp_Template_/Cpp_Template__CXX/: Makefile.am  main.cxx
data/templates/CppSalome6/src/Cpp_Template_/Cpp_Template__SWIG/: Makefile.am
data/templates/CppSalome78/src/Cpp_Template_/Cpp_Template__CXX/: Makefile.am  main.cxx
data/templates/CppSalome8/src/Cpp_Template_/Cpp_Template__SWIG/: Makefile.am
data/templates/Cpp_Template_stda/src/Cpp_Template_/Cpp_Template__CXX/: Cpp_Template_.cxx  Cpp_Template_.hxx  Makefile.am  main.cxx
data/templates/PythonComponent/doc/: CMakeLists.txt  Makefile.am  Makefile.in  doxyfile.in  index.doc
data/templates/PythonComponent/doc/static/: footer.html  header.html
data/templates/PythonComponent/idl/: Makefile.am  Makefile.in  PYCMP_Gen.idl
data/templates/PythonComponent/resources/: CMakeLists.txt  Makefile.am  Makefile.in  PYCMPCatalog.xml  PYCMPCatalog.xml.in  SalomeApp.xml
data/templates/PythonComponent8/idl/: CMakeLists.txt  PYCMP_Gen.idl
doc/: Makefile  README  rst_prolog.rst
doc/source/: conf.py  index.rst
doc/src/: Makefile_tmp  conf.py  configuration.rst  index.rst  installation_of_sat.rst  usage_of_sat.rst  write_command.rst
src/: ElementPath.py  ElementTree.py  ElementTreePython2.py  ElementTreePython3.py  __init__.py  architecture.py  callerName.py  compilation.py  config.py  debug.py  environment.py  fileEnviron.py  fork.py  logger.py  loggingSimple.py  module.py  options.py  patching.py  printcolors.py  product.py  pyconf.py  returnCode.py  salomeTools.py  system.py  template.py  test_command.py  test_module.py  utilsSat.py  versionMinorMajorPatch.py  xmlManager.py
src/common/: __init__.py  architecture.py  config_pyconf.py  fileSystem.py  options.py  printcolors.py  pyconf.py
src/i18n/: README  build_strings.sh  i18nTest.py  translate.py  translate.sh
src/internal_config/: INSTALL_BIN.template  README_BIN.template  README_BIN_NO_PROFILE.template  README_BIN_VIRTUAL_APP.template  README_LAUNCHER.template  README_PROJECT.template  README_SAT.template  README_SRC.template  create_appli.py.for_bin_packages.template  distrib.pyconf  salomeTools.pyconf  salomeTools_win.pyconf
src/test/: TOOLS.py  scriptTemplate.py  ver_class.py
src/xsl/: command.xsl  hat.xsl  job_report.xsl  jobs_board_report.xsl  jobs_global_report.xsl  jobs_table_report.xsl  test.xsl  test_history.xsl
test/: README_config_0_3_9.txt  initializeTest.py  run_all.sh  test.py  test_020_debug.py  test_021_versionMinorMajorPatch.py  test_022_compute_dependency.py  test_024_logging.py  test_035_pyconf.py  test_100_satHelp.py  test_500_APPLI_TEST.py  test_501_paramiko.py
test/APPLI_TEST/: APPLI_TEST.pyconf
test/_testTools/: tools.py
(+256 files in other folders)
